[package]
name = "comp-flow"
version = "0.1.0"
edition = "2021"
authors = ["Aurélie Grebe"]
documentation = "https://docs.rs/comp-flow/"
description = "Basic compressible flow relations"
readme = "README.md"
repository = "https://github.com/aureliegrebe/comp-flow"
license = "MIT"
keywords = ["fluid", "supersonic", "compressible"]
categories = ["aerospace::simulation", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
eqsolver = "0.1.3"
